--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -1,2 +1,3 @@
-<h1>App#index</h1>
-<p>Find me in app/views/app/index.html.erb</p>
+<!-- app/views/library/index.html.erb -->
+<div id="root" />
+<%= javascript_pack_tag 'index' %>
