--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -1,3 +1,3 @@
 <!-- app/views/library/index.html.erb -->
-<div id="root" />
+<div style="height: 100%;" id="root" />
 <%= javascript_pack_tag 'index' %>
