add tournaments route

--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,2 +1,2 @@
 <div id="root" style="min-height: 100%; background: #f0f2f5;"/>
-<%= javascript_pack_tag 'index' %>
+<%= javascript_pack_tag 'tournaments' %>
