--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -1,2 +1,3 @@
 <div id="root" style="min-height: 100%; background: #f0f2f5;"/>
 <%= javascript_pack_tag 'index' %>
+<%= stylesheet_pack_tag 'index' %>
